Removed --add-modules java.xml.bind for Java Openjdk 11